--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,8 @@ body {
   width: 100%;
   min-height: calc(100vh - 80px);
   max-height: calc(100vh - 80px);
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .title-page {
